--- a/FinalmaskCameraDetect.ipynb
+++ b/FinalmaskCameraDetect.ipynb
@@ -10,7 +10,8 @@
     "import numpy as np\n",
     "import pandas as pd\n",
     "import tensorflow as tf\n",
-    "import cv2"
+    "import cv2\n",
+    "from tensorflow.keras.applications.efficientnet import preprocess_input"
    ]
   },
   {
@@ -40,7 +41,8 @@
    "source": [
     "from tensorflow.keras.models import load_model\n",
     "\n",
-    "model = load_model(\"my_model.h5\")"
+    "# model = load_model(\"my_model.h5\")\n",
+    "model = load_model('my_efficient_model.h5')"
    ]
   },
   {
@@ -93,7 +95,8 @@
     "while True:\n",
     "    ret, frame = cap.read()\n",
     "    img = cv2.resize(frame, (224, 224))  \n",
-    "    img = img / 255.0                    \n",
+    "    # img = img / 255.0       \n",
+    "    img = preprocess_input(img)               \n",
     "    y_pred = model.predict(img.reshape(1, 224, 224, 3), verbose=0) \n",
     "    coords = detect_face(cv2.cvtColor(frame, cv2.COLOR_BGR2GRAY))\n",
     "    for x,y,w,h in coords:\n",
@@ -140,7 +143,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a3821a28",
+   "id": "0945f8e3",
    "metadata": {},
    "outputs": [],
    "source": []
